--- a/FAQ.html
+++ b/FAQ.html
@@ -34,8 +34,8 @@
 
 <div class="container-fluid">	  
 	  <div class="row block_main">
-	  	<div class="col-lg-12 p-0" style="text-align: center;" id="header_aboutus"> 
-          <h1 id="aboutus_description_text"> Частые вопросы </h1>
+	  	<div class="col-lg-12 p-0" style="text-align: center;" id="header_faq"> 
+          <h1 id="faq_description_text"> Частые вопросы </h1>
             <div class="col-lg-10 p-0 offset-1"  style="text-align: left; margin-top: 100px; margin-bottom: 150px;"> 
               <p> Принимаете ли вы оплату картой? 
               </p>
