--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <div class="container-fluid">	  
 	  <div class="row block_main" >
-	  	<div class="col-lg-12 p-0" style="text-align: center;" id="header_main">
+	  	<div class="col-lg-12 p-0" id="header_main">
         <img src="img/logo.png" style="margin-top: 17%;"> 
           <p id="main_description_text"> Ежемесячная подписка на коробочки с книгами <br> и атмосферными подарками. 
           </p>
@@ -340,20 +340,20 @@
 
       <div class="row block_prices">
 
-          <div class="col-lg-2 offset-2">
+          <div class="col-lg-2 offset-lg-2">
               <img src="img/2.png" class="months_books">
               <p class="months">1 месяц</p>
               <p class="price"> 2 000р </p>
               <p class="month_price"> (2 000р/мес)</p>
           </div>
 
-          <div class="col-lg-2 offset-1">
+          <div class="col-lg-2 offset-lg-1">
               <img src="img/6.png" class="months_books">
               <p class="months">3  месяца</p>
               <p class="price"> 5 400р </p>
               <p class="month_price"> (1 800р/мес)</p>
           </div>
-          <div class="col-lg-2 offset-1">
+          <div class="col-lg-2 offset-lg-1">
               <img src="img/12.png" class="months_books">
               <p class="months">6 месяцев</p>
               <p class="price"> 9 600р </p>
@@ -392,14 +392,14 @@
     <h1 id="reviews">Отзывы</h1>
       
     <div class="row justify-content-center">
-        <div class="col-5">
+        <div class="col-md-5">
             <div class="review_name">
                 <div> <img src="img/review01.png"> </div> 
                 <div> <p>Полина </p></div>
             </div>
             <div class="review_body"> <p> Вчера забрала коробочку и сегодня вручила имениннице) Столько счастья😍 Спасибо за Вашу работу и такое отношение к ней❤️ Обязательно буду заказывать ещё!)</p></div>
         </div>
-         <div class="col-5">
+         <div class="col-md-5">
             <div class="review_name">
                 <div> <img src="img/review02.png"> </div>
                 <div> <p>Екатерина</p> </div>
@@ -415,7 +415,7 @@
 
 
     <div class="row justify-content-center">
-        <div class="col-8">   
+        <div class="col-md-8">   
             <h3 id="discount"> Получи скидку 7% на следующую покупку и будь в курсе наших новостей! </h3>
         </div> 
     </div>
@@ -426,7 +426,7 @@
 
 
     <div class="row justify-content-center">
-        <div class="col-4">
+        <div class="col-10 col-md-4">
             <div class="form-group" style="margin-bottom: 30px;">
               <label for="InputName">Имя</label>
               <input type="  " class="form-control" id="InputName" placeholder="Имя">
@@ -471,11 +471,11 @@
 
         <div class="row green">
 
-            <div class="col-4 p-0" style="margin-left: 30px;"> 
+            <div class="col-6 col-md-4 p-0" style="margin-left: 30px;"> 
                 <un> <li><a href="FAQ.html"> Частые вопросы </a></li> <li><a href="PastMonthsBoxes.html"> Коробочки прошлых месяцев </a></li> </un>
             </div>
             
-            <div class="col-4 p-0"> 
+            <div class="col-6 col-md-4 p-0"> 
                 <un> <li><a href="CorporatePresents.html"> Корпоративные подарки </a></li> <li><a href="Certificate.html"> Сертификат </a></li> </un>
             </div>
 
