--- a/FAQ.html
+++ b/FAQ.html
@@ -7,6 +7,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/mobile.css">
+
+
+
+   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 
 		
 </head>
@@ -32,25 +40,156 @@
 	</header>
 
 
-<div class="container-fluid">	  
-	  <div class="row block_main">
-	  	<div class="col-lg-12 p-0" style="text-align: center;" id="header_faq"> 
-          <h1 id="faq_description_text"> Частые вопросы </h1>
-            <div class="col-lg-10 p-0 offset-1"  style="text-align: left; margin-top: 100px; margin-bottom: 150px;"> 
-              <p> Принимаете ли вы оплату картой? 
-              </p>
-              <p> Коробочка для книжных меломанов. Здесь может оказаться любая тематика (кроме книг на английском), а вы наверняка, откроете для себя что-нибудь новенькое. 
-              </p>
-              <p> Какой срок действия у сертификатов? 
-              </p>
-              <p> Можно ли отказаться от заказа до его отправления? 
-              </p>
-            </div>
-      </div>
-    </div>
-</div>	 
+<div class="container-fluid">
 
- 
+
+       <h1> Частые вопросы </h1>
+
+          <div class="row justify-content-center">
+
+
+<table class="table table-hover col-md-10 " style="max-width: 1100px;">
+
+<tbody>
+    <tr data-toggle="collapse" data-target="#faq_delivery" class="clickable">
+        <td>
+          Какие есть варианты доставки?
+        </td>
+    </tr>
+    <tr>
+      <td>
+        <!-- <td colspan="3"> -->
+            <div id="faq_delivery" class="collapse">
+              <p>     1. По Санкт - Петербургу:
+
+          - Самовывоз (метро Черная Речка, пр. Большевиков, Чкаловская) - бесплатно
+          - Курьер в пределах КАД - 150 руб.
+          - Курьер по Лен. Области - 200 руб.
+
+          2. По России:
+
+          - Транспортные компании СДЭК или Boxberry до пункта выдачи - от 150 руб. до 500 руб. в зависимости от региона (калькулятор доставки посчитает точную стоимость при оформлении заказа). 
+          - Почта России - 250 руб. в любой город
+
+          3. Другие страны:
+
+          - Почта России от 1000 до 1500 руб., в зависимости от страны (калькулятор доставки посчитает точную стоимость при оформлении заказа).
+            </p>
+
+            </div>
+        </td>
+    </tr>
+
+    <tr data-toggle="collapse" data-target="#faq_certain_book" class="clickable">
+        <td>
+          Можно ли попросить вас положить конкретную книгу?
+        </td>
+    </tr>
+    <tr>
+      <td>
+        <!-- <td colspan="3"> -->
+            <div id="faq_certain_book" class="collapse">
+              <p> Наша главная идея - это сюрприз. Но в комментариях к заказу можно указать пожелания, что бы хотелось или, наоборот, что вы категорически получить не хотите. По возможности, всегда учитываем это при подборе книг.
+            </p>
+
+            </div>
+        </td>
+    </tr>
+
+    <tr data-toggle="collapse" data-target="#faq_book" class="clickable">
+        <td>
+          Что делать, если я получил(а) книгу, которая у меня уже есть?
+        </td>
+    </tr>
+    <tr>
+      <td>
+        <!-- <td colspan="3"> -->
+            <div id="faq_book" class="collapse">
+              <p> Конечно, такая вероятность есть, хоть мы и стараемся подбирать не самые ординарные варианты.
+              Во-первых, кому, как не нам с вами знать, что книга - отличный подарок другу или близкому человеку. Наверняка, у вас найдется кто-то, кто с радостью пополнит ей свою библиотеку. А вам будет с кем обсудить прочитанное.
+
+              Если книгу так и не удалось пристроить, сообщите нам об этом! Мы давно думали о бук-кроссинге среди наших читателей, но пока не набралось прецедентов. Так что не стесняйтесь, пишите, мы всегда на связи!
+            </p>
+
+            </div>
+        </td>
+    </tr>
+
+
+
+        <tr data-toggle="collapse" data-target="#faq_date" class="clickable">
+        <td>
+          Можно ли получить коробочку к конкретной дате?
+        </td>
+    </tr>
+    <tr>
+      <td>
+        <!-- <td colspan="3"> -->
+            <div id="faq_date" class="collapse">
+              <p> Мы работаем по принципу ежемесячной подписки и коробочки отправляем раз в месяц. Доставка к определенной дате обсуждается индивидуально, так что пишите (лучше заранее) и мы постараемся что-нибудь придумать.
+            </p>
+
+            </div>
+        </td>
+    </tr>
+
+
+
+        <tr data-toggle="collapse" data-target="#faq_payment" class="clickable">
+        <td>
+          Я могу оплатить коробочку переводом или при получении на почту?
+        </td>
+    </tr>
+    <tr>
+      <td>
+        <!-- <td colspan="3"> -->
+            <div id="faq_payment" class="collapse">
+              <p> Оплата коробочек производится только на сайте при оформлении заказа (100% предоплата). Это помогает нам в ведении базы наших читателей и правильном расчете налогов. Если у вас возникают проблемы с оплатой на сайте, напишите нам, пожалуйста.
+            </p>
+
+            </div>
+        </td>
+    </tr>
+
+
+        <tr data-toggle="collapse" data-target="#faq_corporate" class="clickable">
+        <td>
+          Делаете ли вы корпоративные заказы?
+        </td>
+    </tr>
+    <tr>
+      <td>
+        <!-- <td colspan="3"> -->
+            <div id="faq_corporate" class="collapse">
+              <p> Да. У нас вы можете оформить заказ на корпоративные подарки сотрудникам или партнерам. В зависимости от объема и бюджета в индивидуальном порядке обсуждается скидка и изменения в наполнении. По желанию коробочки брендируются вашим логотипом.
+            </p>
+
+            </div>
+        </td>
+    </tr>
+
+
+        <tr data-toggle="collapse" data-target="#faq_sertificate" class="clickable">
+        <td>
+          Можно купить подарочный сертификат?
+        </td>
+    </tr>
+    <tr>
+      <td>
+        <!-- <td colspan="3"> -->
+            <div id="faq_sertificate" class="collapse">
+              <p> Можно. Просто оформляйте заказ на коробочку, сертификат на которую вы хотели бы подарить, а в комментариях обязательно укажите, что это подарочный сертификат. Его можно получить как в электронном формате, так и в печатном. После оформления заказа мы свяжемся с вами для уточнения деталей.
+            </p>
+
+            </div>
+        </td>
+    </tr>
+
+</tbody>
+</table>
+
+
+</div>
 
 	<footer class="footer">
 
@@ -80,6 +219,7 @@
             </div>
 
         </div>
+
 
 
 	</footer>
