--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
 
 
     <div class="row justify-content-center">
-        <div class="col-10 col-md-4">
+        <div class="col-10 col-md-4 col-lg-3">
             <div class="form-group" style="margin-bottom: 30px;">
               <label for="InputName">Имя</label>
               <input type="  " class="form-control" id="InputName" placeholder="Имя">
