--- a/AboutUs.html
+++ b/AboutUs.html
@@ -15,7 +15,7 @@
 	<header>
    <div class="menu"> 
     <img src="img/logo.png" style="height: 40px; position: absolute; left: 75px;">
-    <un > <li><a href="index.html"> Главная </a></li> <li><a href="Delivery.html"> Доставка </a></li> <li><a href="FAQ.html"> Частые вопросы </a></li> <li><a href="AboutUs.html"> О нас </a></li> 
+    <un > <li><a href="index.html"> Главная </a></li> <li><a href="FAQ.html"> Доставка </a></li> <li><a href="FAQ.html"> Частые вопросы </a></li> <li><a href="AboutUs.html"> О нас </a></li> 
         <li class="icon_cart">
           <div style="display: inline-block;">
             <a href="Cart.html" class="menu_cart"> 
@@ -32,40 +32,43 @@
 	</header>
 
 
+ <h1> О нас </h1>
+
 <div class="container-fluid">	  
-	  <div class="row block_main">
-	  	<div class="col-lg-12 p-0" style="text-align: center;" id="header_aboutus"> 
-          <h1 id="aboutus_description_text"> О нас </h1>
-          <img src="img/img-2375.png" style="margin-top: 30px;">
-            <div class="col-lg-10 p-0 offset-1"  style="text-align: left; margin-top: 100px; margin-bottom: 150px;"> 
+	  <div class="row justify-content-center">
+	  	<div class="col-md-8 p-0" >          
+          <img src="img/img-2375.png">
+      </div>
+          
+      <div class="col-lg-10 p-0 about_text" > 
               <p> Нас зовут Оля и Лена. Мы дружим уже больше 20 лет! Родились и познакомились в холодном Мурманске, а потом вместе переехали в Петербург 
               </p>
               <p> Нам всегда хотелось какой-нибудь свой небольшой проект. Было много разных идей, и интересных, и странных, и глупых, что уж там скрывать. Но хотелось чего-то душевного, хотелось делиться теплыми эмоциями. Так и родилась эта идея. 
               </p>
               <p> Наша цель - сформировать и поддержать привычку читать книги. Именно поэтому у нас можно оформить подписку сразу на полгода. Вы удивитесь, как много нового можно узнать, читая хотя бы две книги в месяц! Попробуйте! 
               </p>
-            </div> 
-          <h1 id="aboutus_description_text"> Почему стоит заказать у нас </h1>
-              <div class="row why_order_from_us" style="padding-left: 15px; padding-right: 15px;">
-                <div class="col-lg-4">
-                  Мы следим за новинками, читаем блоги, общаемся с книгоманами, сами много читаем и стараемся подбирать самые неординарные варианты.
-                </div>
-                <div class="col-lg-4">
-                  Вам не придется тратить время на выбор книги и поход в магазин, ведь даже онлайн-шоппинг - дело нелегкое.
-                </div>
-                <div class="col-lg-4">
-                  В коробочке вас ждут не только книги, но и подарки ручной работы, которые поднимут настроение и создадут подходящую атмосферу для чтения.
-                </div>
-              </div>
-            </div>
-	  	</div>
-	  </div>	 
+      </div> 
+    </div>  
+
+    <h1> Почему стоит заказать у нас </h1>
+
+
+    <div class="row " style="padding: 0 15px;">
+      <div class="col-sm-4">
+        Мы следим за новинками, читаем блоги, общаемся с книгоманами, сами много читаем и стараемся подбирать самые неординарные варианты.
+      </div>
+      <div class="col-sm-4">
+        Вам не придется тратить время на выбор книги и поход в магазин, ведь даже онлайн-шоппинг - дело нелегкое.
+      </div>
+      <div class="col-sm-4">
+        В коробочке вас ждут не только книги, но и подарки ручной работы, которые поднимут настроение и создадут подходящую атмосферу для чтения.
+      </div>
+    </div>
+</div>
 
  
 
 	<footer class="footer">
-
-        
 
         <h2 id="contscts"> Напишите нам! </h2>
 
