Side Nav Animation Added

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/mobile.css">
 
 		
 </head>
@@ -15,7 +16,7 @@
 	<header>
    <div class="menu"> 
     <img src="img/logo.png" style="height: 40px; position: absolute; left: 75px;">
-    <un > <li><a href="index.html"> Главная </a></li> <li><a href="FAQ.html"> Доставка </a></li> <li><a href="FAQ.html"> Частые вопросы </a></li> <li><a href="AboutUs.html"> О нас </a></li> 
+    <un > <li><a href="index.html"> Главная </a></li> <li><a href="FAQ.html"> Доставка </a></li> <li><a href="FAQ.html"> Частые вопросы </a></li> <li><a href="AboutUs.html" class="active"> О нас </a></li> 
         <li class="icon_cart">
           <div style="display: inline-block;">
             <a href="Cart.html" class="menu_cart"> 
@@ -35,7 +36,7 @@
  <h1> О нас </h1>
 
 <div class="container-fluid">	  
-	  <div class="row justify-content-center">
+	  <div class="row justify-content-center block_about_picture">
 	  	<div class="col-md-8 p-0" >          
           <img src="img/img-2375.png">
       </div>
@@ -68,9 +69,11 @@
 
  
 
-	<footer class="footer">
+<footer class="footer">
 
-        <h2 id="contscts"> Напишите нам! </h2>
+        
+
+        <h2 id="contacts"> Напишите нам! </h2>
 
         <div class="row justify-content-center block_writetous"> 
 
@@ -85,18 +88,18 @@
 
         <div class="row green">
 
-            <div class="col-4 p-0" style="margin-left: 30px;"> 
+            <div class="col-6 col-md-4 p-0" style="margin-left: 30px;"> 
                 <un> <li><a href="FAQ.html"> Частые вопросы </a></li> <li><a href="PastMonthsBoxes.html"> Коробочки прошлых месяцев </a></li> </un>
             </div>
             
-            <div class="col-4 p-0"> 
+            <div class="col-6 col-md-4 p-0"> 
                 <un> <li><a href="CorporatePresents.html"> Корпоративные подарки </a></li> <li><a href="Certificate.html"> Сертификат </a></li> </un>
             </div>
 
         </div>
 
 
-	</footer>
+  </footer>
 </div>        
 
 
