--- a/Cart.html
+++ b/Cart.html
@@ -8,6 +8,7 @@
 	 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/cart.css">
+  <link rel="stylesheet" href="css/mobile.css">
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -21,6 +22,7 @@
 <body id="main_page" >
 	<header>
    <div class="menu"> 
+    <img src="img/logo.png" style="height: 40px; position: absolute; left: 75px;">
     <un > <li><a href="index.html"> Главная </a></li> <li><a href="FAQ.html"> Доставка </a></li> <li><a href="FAQ.html"> Частые вопросы </a></li> <li><a href="AboutUs.html"> О нас </a></li> 
         <li class="icon_cart">
           <div style="display: inline-block;">
@@ -136,41 +138,6 @@
 
 
 
-
-
-
-<!-- <div class="d-flex flex-row">
-  <div class="offset-1 odd_bkg">  
-    <div class="d-inline-flex offset-1">
-      <div>
-          <p>Саморазвитие и мотивация</p>
-          <div class="user_choices">
-            <p class="choice_name">Подписка:</p> 
-            <p>3 месяца</p>
-          </div>
-          <div class="user_choices">
-            <p class="choice_name">Наполнение:</p> 
-            <p>Только книги</p>
-          </div>
-      </div>
-    </div>
-
-    <div class="p-2 d-inline-flex offset-1 d-flex flex-column justify-content-center">
-      <p>2000</p>
-    </div>
-    <div class="p-2 d-inline-flex d-flex flex-column justify-content-center">
-      <p>1</p>
-    </div>
-    <div class="p-2 d-inline-flex d-flex flex-column justify-content-center">
-      <p>2000</p>
-    </div>
-    <div class="p-2 d-inline-flex d-flex flex-column justify-content-center">
-      <img src="img/icon_delete.png" style="margin-top: -24px;">
-    </div>
-  </div>
-</div>
-     -->
-
 	<footer class="footer">
 
         
@@ -190,18 +157,18 @@
 
         <div class="row green">
 
-            <div class="col-4 p-0" style="margin-left: 30px;"> 
+            <div class="col-6 col-md-4 p-0" style="margin-left: 30px;"> 
                 <un> <li><a href="FAQ.html"> Частые вопросы </a></li> <li><a href="PastMonthsBoxes.html"> Коробочки прошлых месяцев </a></li> </un>
             </div>
             
-            <div class="col-4 p-0"> 
+            <div class="col-6 col-md-4 p-0"> 
                 <un> <li><a href="CorporatePresents.html"> Корпоративные подарки </a></li> <li><a href="Certificate.html"> Сертификат </a></li> </un>
             </div>
 
         </div>
 
 
-	</footer>
+  </footer>
 </div> 
 
 
