Index>Slider Update
Fixed situations when the icons next/prev didnt work

--- a/index.html
+++ b/index.html
@@ -117,15 +117,18 @@
 		
 
 
-<div id="boxes" class="carousel slide nav" data-ride="carousel">
+<div id="carouselControls" class="carousel slide " data-ride="carousel">
+
   <div class="carousel-inner">
     <div class="carousel-item active">
 
       <div class="row justify-content-center">
         <div class="d-none col-lg-4 d-flex flex-column justify-content-end">
+          <section id="boxes" class="nav">
             <div class="box_img">
                <img src="img/mix.png" id="mix"> 
             </div>
+          </section>  
             <div class="d-none d-sm-block button_additional">
                 <a href="">Коробочки прошлых месяцев</a>
             </div>
@@ -381,6 +384,8 @@
 
 
 </div>
+
+
 
 
 
