--- a/Boxes.html
+++ b/Boxes.html
@@ -32,100 +32,84 @@
     </div>
 	</header>
 
+<div class="container-fluid picture_page">  
+  <h3> English Box </h3>
 
- <div><img src="img/"></div> <h3> English Box </h3>
-
-<div class="container-fluid picture_page">	  
+  
 	  <div class="row" align="justify-content-center">
-	  	<div class="col-md-4" >          
-          <img src="img/Eng_01.jpg">
+	  	<div class="col-md-4">          
+          <img src="img/Eng_01.png">
       </div>
-      <div class="col-md-4" >
-          <img src="img/Eng_02.jpg">
+      <div class="col-md-4">
+          <img src="img/Eng_02.png">
       </div>
-      <div class="col-md-4" >
-          <img src="img/Eng_03.jpg">
+      <div class="col-md-4">
+          <img src="img/Eng_03.png">
       </div>
     </div>  
 
-  <h3> Художественная </h3> <div><img src="img/"></div>
+  <h3> Художественная </h3>
 
     <div class="row" align="justify-content-center">
-      <div class="col-md-4">
-        <img src="img/">
+      <div class="col-md-6">
+        <img src="img/Hud_01.png">
       </div>
-      <div class="col-md-4">
-        <img src="img/">
-      </div>
-      <div class="col-md-4">
-        <img src="img/">
+      <div class="col-md-6">
+        <img src="img/Hud_02.png">
       </div>
     </div>
 
     <div class="row" align="justify-content-center">
-      <div class="col-md-4">
-        <img src="img/">
+      <div class="col-md-6">
+        <img src="img/Hud_03.png">
       </div>
-      <div class="col-md-8">
-        <img src="img/">
+      <div class="col-md-6">
+        <img src="img/Hud_04.png">
       </div>
     </div>
     
 
-<h3> Нон-фикшн / Публицистика </h3> <div> <img src="img/"> </div>
+  <h3> Нон-фикшн / Публицистика </h3>
 
     <div class="row" align="justify-content-center">
-      <div class="col-md-4">
-        <img src="img/">
+      <div class="col-md-6">
+        <img src="img/Non_01.png">
       </div>
-      <div class="col-md-4">
-        <img src="img/">
-      </div>
-      <div class="col-md-4">
-        <img src="img/">
+      <div class="col-md-6">
+        <img src="img/Non_02.png">
       </div>
     </div>
 
 
-  <div> <img src="img/"> </div> <h3> Микс </h3> 
+  <h3> Микс </h3> 
 
     <div class="row" align="justify-content-center">
-      <div class="col-md-8">
-        <img src="img/">
+      <div class="col-md-4">
+        <img src="img/Mix_01.png">
       </div>
       <div class="col-md-4">
-        <img src="img/">
+        <img src="img/Mix_02.png">
       </div>
-    </div>
-    <div class="row" align="justify-content-center">
       <div class="col-md-4">
-        <img src="img/">
-      </div>
-      <div class="col-md-8">
-        <img src="img/">
+        <img src="img/Mix_03.png">
       </div>
     </div>
 
-  <div> <img src="img/"> </div> <h3> Саморазвитие и мотивация </h3> 
+  <h3> Саморазвитие и мотивация </h3> 
 
     <div class="row" align="justify-content-center">
-      <div class="col-md-8">
-        <img src="img/">
+      <div class="col-md-4">
+        <img src="img/Samo_01.png">
       </div>
       <div class="col-md-4">
-        <img src="img/">
+        <img src="img/Samo_02.png">
       </div>
-    </div>
-    <div class="row" align="justify-content-center">
       <div class="col-md-4">
-        <img src="img/">
-      </div>
-      <div class="col-md-8">
-        <img src="img/">
+        <img src="img/Samo_03.png">
       </div>
     </div>
 
-  <div> <img src="img/"> </div> <h3> Классика </h3> 
+  <h3> Классика </h3> 
 
     <div class="row" align="justify-content-center">
       <div class="col-md-8">
