index boxes aboutus css
changes according to Trello ToDo list

--- a/Boxes.html
+++ b/Boxes.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
 	<meta charset="utf-8">
 	<title>Get Your Book</title>
@@ -109,7 +109,7 @@
       </div>
     </div>
 
-  <h3> Классика </h3> 
+  <!-- <h3> Классика </h3> 
 
     <div class="row" align="justify-content-center">
       <div class="col-md-8">
@@ -126,7 +126,7 @@
       <div class="col-md-8">
         <img src="img/">
       </div>
-    </div>
+    </div> -->
 
 </div>
 
