--- a/index.html
+++ b/index.html
@@ -104,19 +104,19 @@
 
 
 
- <section id="boxes" class="nav">
-<div class="container-fluid">	  
-	  <div class="row block_main" >
-	  	<div class="col-lg-12 p-0" id="header_main">
-        <img src="img/logo.png" style="margin-top: 17%;"> 
-          <p id="main_description_text"> Ежемесячная подписка на коробочки с книгами <br> и атмосферными подарками. 
-          </p>
-	  	</div>
-	  </div>	 
+<section id="boxes" class="nav">
+    <div class="container-fluid">	  
+	   <div class="row block_main" >
+	  	  <div class="col-lg-12 p-0" id="header_main">
+          <img src="img/logo.png" style="margin-top: 17%;"> 
+            <p id="main_description_text"> Ежемесячная подписка на коробочки с книгами <br> и атмосферными подарками. 
+            </p>
+	  	  </div>
+	   </div>	 
 
    
 
-		 </section>  
+</section>  
 
 
 <div id="carouselControls" class="carousel slide " data-ride="carousel">
@@ -466,6 +466,22 @@
             </div>
             <div class="review_body"> <p> Ну наконец-то! Наконец-то эта волшебная коробочка от @get_your_book у меня!
               И даже то, что, к сожалению, возникли проблемы со службой доставки, сделало момент получения посылки ещё более волнительным и приятным😍 <br> Спасибо Вам огромное, @get_your_book за то, что дарите такие тёплые эмоции, интересные книги и приятные подарочки❤️ </p>
+            </div>
+        </div>
+        <div class="col-md-5">
+            <div class="review_name">
+                <div> <img src="img/review03.png"> </div>
+                <div> <p>Юлия</p> </div>
+            </div>
+            <div class="review_body"> <p> Не знаю как у вас, а у меня начало последних нескольких месяцев ознаменовано походом в почтовое отделение за коробочкой от @get_your_book 😊 И каждый раз он сопровождается волнением и предвкушением-что же там внутри?) <br> Это не только четвертая коробочка по счету, но и четвертая по тематике. И каждый раз ее наполнение превосходит мои ожидания. Оля и Лена @get_your_book я не знаю как вам это удается, но еще не было ни одной книги, которая не заинтересовала бы меня. Хочется от всей души поблагодарить вас за ваш труд и за такие душевные коробочки с приятными подарочками, а также за частичку Питера) <br> P.S. Уже в ожидании следующей коробочки😊 </p>
+            </div>
+        </div>
+        <div class="col-md-5">
+            <div class="review_name">
+                <div> <img src="img/review04.png"> </div>
+                <div> <p>Ирина</p> </div>
+            </div>
+            <div class="review_body"> <p> Я, видимо, не только косметический коробочный маньяк, но и в принципе-коробочный) 📦 теперь вот книжный 📚 спасибо @get_your_book за эту прелестную прелесть : за открытку, ✍️ подписанную от руки, за сюрприз в плане полученных книг🤓, за оперативную 🏃‍♂️ доставку, за приятные мелочи 📖 ))) все очень в тему и безумно приятно 🎁❤️ если вы хотите сделать неожиданный сюрприз самим себе или кому-то из близких ( я вот отправила в Братиславу подруге такую коробочку, и никто ещё не знает, что же ее ожидает внутри ;)), если вы любите шуршать страницами , то вам однозначно в @get_your_book , также большой плюс , что можно выбрать вариант наполнения книг по тематике ( художественная, классика, нон-фикшн,саморазвитие и мотивация, English, микс) </p>
             </div>
         </div>
   </div>  
