--- a/Boxes.html
+++ b/Boxes.html
@@ -36,7 +36,7 @@
   <h3> English Box </h3>
 
   
-	  <div class="row" align="justify-content-center">
+	  <div class="row" align="justify-content-center" style="height: 330px;">
 	  	<div class="col-md-4">          
           <img src="img/Eng_01.png">
       </div>
@@ -50,7 +50,7 @@
 
   <h3> Художественная </h3>
 
-    <div class="row" align="justify-content-center">
+    <div class="row" align="justify-content-center" style="height: 330px;">
       <div class="col-md-6">
         <img src="img/Hud_01.png">
       </div>
@@ -59,7 +59,7 @@
       </div>
     </div>
 
-    <div class="row" align="justify-content-center">
+    <div class="row" align="justify-content-center" style="height: 330px;">
       <div class="col-md-6">
         <img src="img/Hud_03.png">
       </div>
@@ -71,7 +71,7 @@
 
   <h3> Нон-фикшн / Публицистика </h3>
 
-    <div class="row" align="justify-content-center">
+    <div class="row" align="justify-content-center" style="height: 330px;">
       <div class="col-md-6">
         <img src="img/Non_01.png">
       </div>
@@ -83,7 +83,7 @@
 
   <h3> Микс </h3> 
 
-    <div class="row" align="justify-content-center">
+    <div class="row" align="justify-content-center" style="height: 330px;">
       <div class="col-md-4">
         <img src="img/Mix_01.png">
       </div>
@@ -97,7 +97,7 @@
 
   <h3> Саморазвитие и мотивация </h3> 
 
-    <div class="row" align="justify-content-center">
+    <div class="row" align="justify-content-center" style="height: 330px;">
       <div class="col-md-4">
         <img src="img/Samo_01.png">
       </div>
