--- a/AboutUs.html
+++ b/AboutUs.html
@@ -36,21 +36,25 @@
  <h1> О нас </h1>
 
 <div class="container-fluid">	  
-	  <div class="row justify-content-center block_about_picture">
-	  	<div class="col-md-8 p-0" >          
-          <img src="img/img-2375.png">
-      </div>
+	   
           
-      <div class="col-lg-10 p-0 about_text justify-content-center" > 
-              <p> Нас зовут Оля и Лена. Мы дружим уже больше 20 лет! Родились и познакомились в холодном Мурманске, а потом вместе переехали в Петербург 
+
+    <div class="row justify-content-center">      
+      <div class="col-lg-8 p-0 justify-content-center" style="margin-bottom: 30px;"> 
+              <p> Нас зовут Оля и Лена. Мы дружим уже больше 20 лет! Родились и познакомились в холодном Мурманске, а потом вместе переехали в Петербург. 
               </p>
-              <!-- <div class="col-md-8 p-0">          
-                <img src="img/img-2375.png">
-              </div> -->
+      </div>
+      <div class="row justify-content-center block_about_picture">
+          <div class="col-md-8 p-0" >          
+              <img src="img/img-2375.png">
+          </div>
+      </div> 
+      <div class="col-lg-10 p-0 about_text justify-content-center" >               
               <p> Нам всегда хотелось какой-нибудь свой небольшой проект. Было много разных идей, и интересных, и странных, и глупых, что уж там скрывать. Но хотелось чего-то душевного, хотелось делиться теплыми эмоциями. Так и родилась эта идея. 
               </p>
               <p> Наша цель - сформировать и поддержать привычку читать книги. Именно поэтому у нас можно оформить подписку сразу на полгода. Вы удивитесь, как много нового можно узнать, читая хотя бы две книги в месяц! Попробуйте! 
               </p>
+      </div>        
       </div> 
     </div>  
 
