--- a/test.html
+++ b/test.html
@@ -47,7 +47,7 @@
               </div>
            </div>
            <div class="button_main add_to_cart_button">
-               <a href=" " id="buy_mix" class="add_to_cart_button" >Заказать</a>
+               <a  id="buy_mix" class="add_to_cart_button" >Заказать</a>
            </div>
         </div>
   </div>
@@ -95,7 +95,7 @@
                       </select>
                 </form>
                 <div class="button_main add_to_cart_button" style="text-align: center; margin-top: 30px; margin-bottom: 40px">
-                  <a href=" " >Добавить в корзину</a>
+                  <a  >Добавить в корзину</a>
                 </div>
               </div>
 
