--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 </section>  
 
 
-<div id="carouselControls" class="carousel slide " data-ride="carousel">
+<div id="carouselIndicators" class="carousel slide " data-ride="carousel">
 
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -425,7 +425,7 @@
   <h1 >Как заказать?</h1> </section>  
 
 
-    <div class="row " >
+    <div class="row mobile_margin" >
         <div class="col-lg-4 offset-lg-1">
             <p class="step_number"> 1 </p> 
             <p>Выбирайте свой любимый книжный жанр и длительность подписки: 1, 3 или 6 месяцев.</p> 
@@ -451,7 +451,7 @@
 <section id="reviews" class="nav">
   <h1 id="reviews">Отзывы</h1> </section>
       
-    <div class="row justify-content-center">
+    <div class="row justify-content-center mobile_margin">
         <div class="col-md-5">
             <div class="review_name">
                 <div> <img src="img/review01.png"> </div> 
