Style Corrections Part 2
Image resizing, sizes of main page blocks, cart style, minor responsiveness changings

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -15,7 +15,7 @@
 <body id="AboutUs" >
 	<header>
    <div class="menu"> 
-    <img src="img/logo.png" style="height: 40px; position: absolute; left: 75px;">
+    <img class="logo d-none d-sm-block" src="img/logo.png">
     <un > <li><a href="index.html"> Главная </a></li> <li><a href="FAQ.html"> Доставка </a></li> <li><a href="FAQ.html"> Частые вопросы </a></li> <li><a href="AboutUs.html" class="active"> О нас </a></li> 
         <li class="icon_cart">
           <div style="display: inline-block;">
