--- a/FAQ.html
+++ b/FAQ.html
@@ -22,7 +22,7 @@
 <body id="FAQ" >
 	<header>
    <div class="menu"> 
-    <img src="img/logo.png" style="height: 40px; position: absolute; left: 75px;">
+    <img class="logo d-none d-sm-block" src="img/logo.png">
     <un > <li><a href="index.html"> Главная </a></li> <li><a href="FAQ.html"> Доставка </a></li> <li><a href="FAQ.html" class="active"> Частые вопросы </a></li> <li><a href="AboutUs.html"> О нас </a></li> 
         <li class="icon_cart">
           <div style="display: inline-block;">
