--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <body id="main_page">
 	<header>
    <div class="menu"> 
+    <img class="logo d-none d-sm-block" src="img/logo.png">
     <un > 
       <li>
         <a href="index.html" class="active"> 
@@ -114,12 +115,12 @@
 </section>  
 
 
-<div id="carouselIndicators" class="carousel slide " data-ride="carousel">
+<div id="carouselControls" class="carousel slide " data-ride="carousel">
   <div class="carousel-inner">
 
     <div class="carousel-item active">
       <div class="row justify-content-center">
-        <div class="d-none col-lg-4 d-flex flex-column justify-content-end">         
+        <div class="d-none col-lg-5 d-flex flex-column justify-content-end">         
             <div class="box_img">
                <img src="img/mix.png" id="mix"> 
             </div>
@@ -146,9 +147,15 @@
                <p>Микс</p>
            </div>
            <div class="box_content_style ">
-              <div style="display: inline-block"> <img src="img/icon_box_content.png"> 
+              <div style="display: inline-block"> <img src="img/icon_box_content.png" style="height: 20px;"> 
               </div> 
               <div class="box_price" style="display: inline-block"> <p>1 900р.</p>
+              </div>
+           </div>
+           <div class="box_content_style ">
+              <div style="display: inline-block"> <img src="img/icon_box_plain.png" style="height: 20px;"> 
+              </div> 
+              <div class="box_price" style="display: inline-block"> <p>900р.</p>
               </div>
            </div>
            <div class="button_main">
@@ -160,7 +167,7 @@
 
     <div class="carousel-item ">
       <div class="row justify-content-center">
-        <div class="d-none col-lg-4 d-flex flex-column justify-content-end">
+        <div class="d-none col-lg-5 d-flex flex-column justify-content-end">
             <div class="box_img">
                <img src="img/fiction.png" id="fiction"> 
             </div>
@@ -187,9 +194,17 @@
                <p>Художественная</p>
            </div>
            <div class="box_content_style ">
-              <div style="display: inline-block"> <img src="img/icon_box_content.png"> </div> <div class="box_price" style="display: inline-block"> <p>1 900р.</p></div>
+              <div style="display: inline-block"> <img src="img/icon_box_content.png" style="height: 20px;"> 
+              </div> 
+              <div class="box_price" style="display: inline-block"> <p>1 900р.</p>
+              </div>
            </div>
-           <div class="button_main">
+           <div class="box_content_style ">
+              <div style="display: inline-block"> <img src="img/icon_box_plain.png" style="height: 20px;"> 
+              </div> 
+              <div class="box_price" style="display: inline-block"> <p>900р.</p>
+              </div>
+           </div>           <div class="button_main">
                <a href=" " id="buy_fiction" data-toggle="modal" data-target="#modal_fiction">Заказать</a>
            </div>
         </div>
@@ -198,7 +213,7 @@
 
     <div class="carousel-item ">
       <div class="row justify-content-center">
-        <div class="d-none col-lg-4 d-flex flex-column justify-content-end">
+        <div class="d-none col-lg-5 d-flex flex-column justify-content-end">
             <div class="box_img">
                <img src="img/non-fiction.png"> 
             </div>
@@ -225,7 +240,16 @@
                <p>Нон-фикшн</p>
            </div>
            <div class="box_content_style ">
-              <div style="display: inline-block"> <img src="img/icon_box_content.png"> </div> <div class="box_price" style="display: inline-block"> <p>1 900р.</p></div>
+              <div style="display: inline-block"> <img src="img/icon_box_content.png" style="height: 20px;"> 
+              </div> 
+              <div class="box_price" style="display: inline-block"> <p>1 900р.</p>
+              </div>
+           </div>
+           <div class="box_content_style ">
+              <div style="display: inline-block"> <img src="img/icon_box_plain.png" style="height: 20px;"> 
+              </div> 
+              <div class="box_price" style="display: inline-block"> <p>900р.</p>
+              </div>
            </div>
            <div class="button_main">
                <a href=" " id="buy_non_fiction" data-toggle="modal" data-target="#modal_non_fiction">Заказать</a>
@@ -236,7 +260,7 @@
 
     <div class="carousel-item ">
       <div class="row justify-content-center">
-        <div class="d-none col-lg-4 d-flex flex-column justify-content-end">
+        <div class="d-none col-lg-5 d-flex flex-column justify-content-end">
             <div class="box_img">
                <img src="img/classic.png" id="classic"> 
             </div>
@@ -263,9 +287,15 @@
                <p>Классика</p>
            </div>
            <div class="box_content_style ">
-              <div style="display: inline-block"> <img src="img/icon_box_content.png"> 
+              <div style="display: inline-block"> <img src="img/icon_box_content.png" style="height: 20px;"> 
               </div> 
               <div class="box_price" style="display: inline-block"> <p>1 900р.</p>
+              </div>
+           </div>
+           <div class="box_content_style ">
+              <div style="display: inline-block"> <img src="img/icon_box_plain.png" style="height: 20px;"> 
+              </div> 
+              <div class="box_price" style="display: inline-block"> <p>900р.</p>
               </div>
            </div>
            <div class="button_main">
@@ -277,7 +307,7 @@
 
     <div class="carousel-item ">
       <div class="row justify-content-center">
-        <div class="d-none col-lg-4 d-flex flex-column justify-content-end">
+        <div class="d-none col-lg-5 d-flex flex-column justify-content-end">
             <div class="box_img">
                <img src="img/self-improvement.png" id="fiction"> 
             </div>
@@ -305,8 +335,17 @@
            <div class="box_name">
                <p>Саморазвитие и мотивация</p>
            </div>
-           <div class="box_content_style">
-              <div style="display: inline-block"> <img src="img/icon_box_content.png"> </div> <div class="box_price" style="display: inline-block"> <p>2 000р.</p></div>
+           <div class="box_content_style ">
+              <div style="display: inline-block"> <img src="img/icon_box_content.png" style="height: 20px;"> 
+              </div> 
+              <div class="box_price" style="display: inline-block"> <p>1 900р.</p>
+              </div>
+           </div>
+           <div class="box_content_style ">
+              <div style="display: inline-block"> <img src="img/icon_box_plain.png" style="height: 20px;"> 
+              </div> 
+              <div class="box_price" style="display: inline-block"> <p>900р.</p>
+              </div>
            </div>
            <div class="button_main">
                <a href=" " id="buy_self_improvement" data-toggle="modal" data-target="#modal_self_improvement">Заказать</a>
@@ -317,7 +356,7 @@
 
     <div class="carousel-item ">
       <div class="row justify-content-center">
-        <div class="d-none col-lg-4 d-flex flex-column justify-content-end">
+        <div class="d-none col-lg-5 d-flex flex-column justify-content-end">
             <div class="box_img">
                <img src="img/english.png"> 
             </div>
@@ -343,8 +382,17 @@
            <div class="box_name">
                <p>English Box</p>
            </div>
-           <div class="box_content_style">
-              <div style="display: inline-block"> <img src="img/icon_box_content.png"> </div> <div class="box_price" style="display: inline-block"> <p>1 900р.</p></div>
+           <div class="box_content_style ">
+              <div style="display: inline-block"> <img src="img/icon_box_content.png" style="height: 20px;"> 
+              </div> 
+              <div class="box_price" style="display: inline-block"> <p>1 900р.</p>
+              </div>
+           </div>
+           <div class="box_content_style ">
+              <div style="display: inline-block"> <img src="img/icon_box_plain.png" style="height: 20px;"> 
+              </div> 
+              <div class="box_price" style="display: inline-block"> <p>900р.</p>
+              </div>
            </div>
            <div class="button_main">
                <a href=" " id="buy_english" data-toggle="modal" data-target="#modal_english">Заказать</a>
@@ -353,12 +401,23 @@
         </div>
     </div>
 
-  <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
+    <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+
+
+
+  <!-- <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"><img src="img/arrow_left.png"></span>
   </a>
   <a class="carousel-control-next" href="#carouselControls" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"><img src="img/arrow_right.png"></span>
-  </a>
+  </a> -->
 
     </div>
   </div>
@@ -375,22 +434,22 @@
 <section id="prices" class="nav">   
   <h1 > Стоимость </h1> </section> 
 
-      <div class="row block_prices">
+      <div class="row block_prices justify-content-center">
 
-          <div class="col-lg-2 offset-lg-2">
+          <div class="col-lg-3">
               <img src="img/2.png" class="months_books">
               <p class="months">1 месяц</p>
               <p class="price"> 2 000р </p>
               <p class="month_price"> (2 000р/мес)</p>
           </div>
 
-          <div class="col-lg-2 offset-lg-1">
+          <div class="col-lg-3">
               <img src="img/6.png" class="months_books">
               <p class="months">3  месяца</p>
               <p class="price"> 5 400р </p>
               <p class="month_price"> (1 800р/мес)</p>
           </div>
-          <div class="col-lg-2 offset-lg-1">
+          <div class="col-lg-3">
               <img src="img/12.png" class="months_books">
               <p class="months">6 месяцев</p>
               <p class="price"> 9 600р </p>
@@ -420,7 +479,7 @@
 
         <div class="col-lg-4 offset-lg-7">
           <p class="step_number">3</p> 
-          <p>Запасайтесь терпением и готовьтесь к приятному сюрпризу - все коробочки отправляются к своим читателям 28-го числа.</p>
+          <p style="margin-right: 20px;">Запасайтесь терпением и готовьтесь к приятному сюрпризу - все коробочки отправляются к своим читателям 28-го числа.</p>
         </div>
         <div class="col-lg-1">
         </div> 
@@ -436,14 +495,14 @@
                 <div> <img src="img/review01.png"> </div> 
                 <div> <p>Полина </p></div>
             </div>
-            <div class="review_body"> <p> Вчера забрала коробочку и сегодня вручила имениннице) Столько счастья😍 Спасибо за Вашу работу и такое отношение к ней❤️ Обязательно буду заказывать ещё!)</p></div>
+            <div class="review_body" style="margin-bottom: 50px;"> <p> Вчера забрала коробочку и сегодня вручила имениннице) Столько счастья😍 Спасибо за Вашу работу и такое отношение к ней❤️ Обязательно буду заказывать ещё!)</p></div>
         </div>
          <div class="col-md-5">
             <div class="review_name">
                 <div> <img src="img/review02.png"> </div>
                 <div> <p>Екатерина</p> </div>
             </div>
-            <div class="review_body"> <p> Ну наконец-то! Наконец-то эта волшебная коробочка от @get_your_book у меня!
+            <div class="review_body" style="margin-bottom: 50px;"> <p> Ну наконец-то! Наконец-то эта волшебная коробочка от @get_your_book у меня!
               И даже то, что, к сожалению, возникли проблемы со службой доставки, сделало момент получения посылки ещё более волнительным и приятным😍 <br> Спасибо Вам огромное, @get_your_book за то, что дарите такие тёплые эмоции, интересные книги и приятные подарочки❤️ </p>
             </div>
         </div>
@@ -565,13 +624,9 @@
           <div>
            <h3 class="" style="padding-top: 0px;">Микс</h3> 
           </div>
-          <div class=" ">
-          <div>
-           <h3 class="" style="padding-top: 0px;" id=""></h3> 
-          </div>
           <div class="container-fluid">            
-            <div class="row ">
-              <div class="col-lg-6 offset-3 p-0">
+            <div class="row justify-content-center">
+              <div class="col-lg-6 p-0">
                 <form>
                   <input type="hidden" name="product" value="mix">
                   <div class="form-group">
@@ -595,11 +650,11 @@
                         <option value="3">3</option>
                         <option value="4">4</option>
                         <option value="5">5</option>
-                        <option>6</option>
-                        <option>7</option>
-                        <option>8</option>
-                        <option>9</option>
-                        <option>10</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
                       </select>
                 </form>
 
@@ -691,7 +746,7 @@
             <div class="row ">
               <div class="col-lg-6 offset-3 p-0">
                 <form>
-                  <input type="hidden" name="product" value="non_fiction">
+                  <input type="hidden" name="product" value="non-fiction">
 
                   <div class="form-group">
                     <label for="FormSelectLength">Подписка</label>
@@ -807,7 +862,7 @@
             <div class="row ">
               <div class="col-lg-6 offset-3 p-0">
                 <form>
-                  <input type="hidden" name="product" value="self_improvement">
+                  <input type="hidden" name="product" value="self-improvement">
 
                   <div class="form-group">
                     <label for="FormSelectLength">Подписка</label>
