--- a/AboutUs.html
+++ b/AboutUs.html
@@ -21,24 +21,46 @@
 
 <body id="AboutUs" >
 	<header>
-   <div class="menu"> 
+<div class="menu"> 
     <img class="logo d-none d-sm-block" src="img/logo.png">
-    <un > <li><a href="index.html"> Главная </a></li> <li><a href="FAQ.html"> Доставка </a></li> <li><a href="FAQ.html"> Частые вопросы </a></li> <li><a href="AboutUs.html" class="active"> О нас </a></li> 
+    <un > 
+      <li>
+        <a href="index.html"> 
+          Главная 
+        </a>
+      </li> 
+      <li>
+        <a href="FAQ.html#delivery"> 
+          Доставка 
+        </a>
+      </li> 
+      <li>
+        <a href="FAQ.html"> 
+          Частые вопросы 
+        </a>
+      </li> 
+      <li>
+        <a href="AboutUs.html" class="active" > 
+          О нас 
+        </a>
+      </li> 
         <li class="icon_cart">
           <div style="display: inline-block;">
-            <a href="Cart.html" class="menu_cart"> 
-              <div style="display: inline-block;" >
+            <a href="cart.html" class="menu_cart"> 
+              <div style="display: inline-block;" > 
                 <div class="cart-cont-num hidden">
-                </div>  
+                </div> 
                 <img src="img/icon-cart.png" style="margin-top: -5px;" class="img_cart_normal"> 
                 <img src="img/icon_cart_red.png" class="img_cart_top">
-                Корзина 
+
+                Корзина
+                
               </div>  
             </a> 
             </div>
         </li> 
       </un> 
-    </div>
+   </div>
 	</header>
 
 
