--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
 </section>  
 
 
+
+<!-- Finla Version Test -->
+
+
 <div id="carouselControls" class="carousel slide " data-ride="carousel">
   <div class="carousel-inner">
 
